[gd_scene load_steps=6 format=3 uid="uid://cnl2j0c7cei22"]

[ext_resource type="Script" path="res://elements/ui/hud.gd" id="1_e6qnf"]
[ext_resource type="Texture2D" uid="uid://cxc0eg6ywmqi5" path="res://assets/background.png" id="1_pd4xr"]
[ext_resource type="PackedScene" uid="uid://ba34h3fg38isn" path="res://elements/ui/stage_counter/stage_counter.tscn" id="3_1ygaq"]
[ext_resource type="Texture2D" uid="uid://dfoxeyqgynyxa" path="res://assets/apple_ico.png" id="4_3hbs8"]
[ext_resource type="PackedScene" uid="uid://b2dyrpsh7ymr5" path="res://elements/ui/knives_counter/knives_counter.tscn" id="6_pubbh"]

[node name="HUD" type="CanvasLayer"]
layer = 5
script = ExtResource("1_e6qnf")

[node name="Background" type="CanvasLayer" parent="."]
layer = -5

[node name="TextureRect" type="TextureRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pd4xr")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.01709, 1)
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 35

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HomeButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
visibility_layer = 32
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 50
text = "< HOME"
flat = true

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50
text = "0"

[node name="StageCounter" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_1ygaq")]
unique_name_in_owner = true
layout_mode = 2

[node name="ApplesCounter" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 50

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/ApplesCounter"]
custom_minimum_size = Vector2(2.08165e-12, 95)
layout_mode = 2
texture = ExtResource("4_3hbs8")
stretch_mode = 4

[node name="StageLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "STAGE"
horizontal_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="KnivesCounter" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_pubbh")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/HomeButton" to="." method="_on_home_button_pressed"]
